# pyPitchTracking

./: README.md  setup.py
PitchTracking/include/: PitchTracker.h  utils.h
PitchTracking/src/: PitchTracker.cpp  utils.cpp
PitchTracking/test/: main.cpp  test_BeatPtsList.cpp  test_kth_max.cpp  test_parallel.cpp
pyPitchTracking/: PitchTrackerContext.py  PitchTrackerNode.py  PitchTrackerYin.py  __init__.py
pyPitchTracking/PyPitchTrackerYin/: PyPitchTrackerYin.pyx  __init__.py
pyPitchTracking/PyPitchTrackerYin/PitchTracking/: CMakeLists.txt
pyPitchTracking/PyPitchTrackerYin/PitchTracking/test/: test_PathFinder.cpp  test_SimpleTracker.cpp  test_TrackersManager.cpp
tutorials/: PitchTracking.ipynb
